--- a/futures_option/futures_option_auto_screenshot.ipynb
+++ b/futures_option/futures_option_auto_screenshot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,302 @@
       "20201228-DCE_v2102-P-7900.jpg\n",
       "20201228-DCE_v2102-C-8000.jpg\n",
       "20201228-DCE_v2102-P-8000.jpg\n",
-      "20201228-DCE_v2102-C-8100.jpg\n"
+      "20201228-DCE_v2102-C-8100.jpg\n",
+      "20201228-DCE_v2102-P-8100.jpg\n",
+      "20201228-DCE_v2102-C-8200.jpg\n",
+      "20201228-DCE_v2102-P-8200.jpg\n",
+      "20201228-ZCE_ma2102-7型报价图.jpg\n",
+      "20201228-ZCE_ma2102.jpg\n",
+      "20201228-ZCE_ma2102-C-2300.jpg\n",
+      "20201228-ZCE_ma2102-P-2300.jpg\n",
+      "20201228-ZCE_ma2102-C-2325.jpg\n",
+      "20201228-ZCE_ma2102-P-2325.jpg\n",
+      "20201228-ZCE_ma2102-C-2350.jpg\n",
+      "20201228-ZCE_ma2102-P-2350.jpg\n",
+      "20201228-ZCE_ma2102-C-2375.jpg\n",
+      "20201228-ZCE_ma2102-P-2375.jpg\n",
+      "20201228-ZCE_ma2102-C-2400.jpg\n",
+      "20201228-ZCE_ma2102-P-2400.jpg\n",
+      "20201228-ZCE_ma2102-C-2425.jpg\n",
+      "20201228-ZCE_ma2102-P-2425.jpg\n",
+      "20201228-ZCE_ma2102-C-2450.jpg\n",
+      "20201228-ZCE_ma2102-P-2450.jpg\n",
+      "20201228-ZCE_ma2102-C-2475.jpg\n",
+      "20201228-ZCE_ma2102-P-2475.jpg\n",
+      "20201228-ZCE_ma2102-C-2500.jpg\n",
+      "20201228-ZCE_ma2102-P-2500.jpg\n",
+      "20201228-ZCE_ma2102-C-2550.jpg\n",
+      "20201228-ZCE_ma2102-P-2550.jpg\n",
+      "20201228-ZCE_ma2102-C-2600.jpg\n",
+      "20201228-ZCE_ma2102-P-2600.jpg\n",
+      "20201228-ZCE_ma2102-C-2650.jpg\n",
+      "20201228-ZCE_ma2102-P-2650.jpg\n",
+      "20201228-ZCE_ma2102-C-2700.jpg\n",
+      "20201228-ZCE_ma2102-P-2700.jpg\n",
+      "20201228-ZCE_ma2102-C-2750.jpg\n",
+      "20201228-ZCE_ma2102-P-2750.jpg\n",
+      "20201228-ZCE_ma2102-C-2800.jpg\n",
+      "20201228-ZCE_ma2102-P-2800.jpg\n",
+      "20201228-ZCE_ma2102-C-2850.jpg\n",
+      "20201228-ZCE_ma2102-P-2850.jpg\n",
+      "20201228-ZCE_ma2102-C-2900.jpg\n",
+      "20201228-ZCE_ma2102-P-2900.jpg\n",
+      "20201228-ZCE_zc2102-7型报价图.jpg\n",
+      "20201228-ZCE_zc2102.jpg\n",
+      "20201228-ZCE_zc2102-C-670.jpg\n",
+      "20201228-ZCE_zc2102-P-670.jpg\n",
+      "20201228-ZCE_zc2102-C-680.jpg\n",
+      "20201228-ZCE_zc2102-P-680.jpg\n",
+      "20201228-ZCE_zc2102-C-690.jpg\n",
+      "20201228-ZCE_zc2102-P-690.jpg\n",
+      "20201228-ZCE_zc2102-C-700.jpg\n",
+      "20201228-ZCE_zc2102-P-700.jpg\n",
+      "20201228-ZCE_zc2102-C-710.jpg\n",
+      "20201228-ZCE_zc2102-P-710.jpg\n",
+      "20201228-ZCE_zc2102-C-720.jpg\n",
+      "20201228-ZCE_zc2102-P-720.jpg\n",
+      "20201228-ZCE_zc2102-C-730.jpg\n",
+      "20201228-ZCE_zc2102-P-730.jpg\n",
+      "20201228-ZCE_zc2102-C-740.jpg\n",
+      "20201228-ZCE_zc2102-P-740.jpg\n",
+      "20201228-ZCE_zc2102-C-750.jpg\n",
+      "20201228-ZCE_zc2102-P-750.jpg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20201228-ZCE_zc2102-C-760.jpg\n",
+      "20201228-ZCE_zc2102-P-760.jpg\n",
+      "20201228-ZCE_zc2102-C-770.jpg\n",
+      "20201228-ZCE_zc2102-P-770.jpg\n",
+      "20201228-ZCE_zc2102-C-780.jpg\n",
+      "20201228-ZCE_zc2102-P-780.jpg\n",
+      "20201228-ZCE_zc2102-C-790.jpg\n",
+      "20201228-ZCE_zc2102-P-790.jpg\n",
+      "20201228-ZCE_zc2102-C-800.jpg\n",
+      "20201228-ZCE_zc2102-P-800.jpg\n",
+      "20201228-ZCE_zc2102-C-810.jpg\n",
+      "20201228-ZCE_zc2102-P-810.jpg\n",
+      "20201228-ZCE_pta2102-7型报价图.jpg\n",
+      "20201228-ZCE_pta2102.jpg\n",
+      "20201228-ZCE_pta2102-C-3400.jpg\n",
+      "20201228-ZCE_pta2102-P-3400.jpg\n",
+      "20201228-ZCE_pta2102-C-3450.jpg\n",
+      "20201228-ZCE_pta2102-P-3450.jpg\n",
+      "20201228-ZCE_pta2102-C-3500.jpg\n",
+      "20201228-ZCE_pta2102-P-3500.jpg\n",
+      "20201228-ZCE_pta2102-C-3550.jpg\n",
+      "20201228-ZCE_pta2102-P-3550.jpg\n",
+      "20201228-ZCE_pta2102-C-3600.jpg\n",
+      "20201228-ZCE_pta2102-P-3600.jpg\n",
+      "20201228-ZCE_pta2102-C-3650.jpg\n",
+      "20201228-ZCE_pta2102-P-3650.jpg\n",
+      "20201228-ZCE_pta2102-C-3700.jpg\n",
+      "20201228-ZCE_pta2102-P-3700.jpg\n",
+      "20201228-ZCE_pta2102-C-3750.jpg\n",
+      "20201228-ZCE_pta2102-P-3750.jpg\n",
+      "20201228-ZCE_pta2102-C-3800.jpg\n",
+      "20201228-ZCE_pta2102-P-3800.jpg\n",
+      "20201228-ZCE_pta2102-C-3850.jpg\n",
+      "20201228-ZCE_pta2102-P-3850.jpg\n",
+      "20201228-ZCE_pta2102-C-3900.jpg\n",
+      "20201228-ZCE_pta2102-P-3900.jpg\n",
+      "20201228-ZCE_pta2102-C-3950.jpg\n",
+      "20201228-ZCE_pta2102-P-3950.jpg\n",
+      "20201228-ZCE_pta2102-C-4000.jpg\n",
+      "20201228-ZCE_pta2102-P-4000.jpg\n",
+      "20201228-ZCE_pta2102-C-4050.jpg\n",
+      "20201228-ZCE_pta2102-P-4050.jpg\n",
+      "20201228-SHFE_al2102-7型报价图.jpg\n",
+      "20201228-SHFE_al2102.jpg\n",
+      "20201228-SHFE_al2102-C-14800.jpg\n",
+      "20201228-SHFE_al2102-P-14800.jpg\n",
+      "20201228-SHFE_al2102-C-14900.jpg\n",
+      "20201228-SHFE_al2102-P-14900.jpg\n",
+      "20201228-SHFE_al2102-C-15000.jpg\n",
+      "20201228-SHFE_al2102-P-15000.jpg\n",
+      "20201228-SHFE_al2102-C-15100.jpg\n",
+      "20201228-SHFE_al2102-P-15100.jpg\n",
+      "20201228-SHFE_al2102-C-15200.jpg\n",
+      "20201228-SHFE_al2102-P-15200.jpg\n",
+      "20201228-SHFE_al2102-C-15300.jpg\n",
+      "20201228-SHFE_al2102-P-15300.jpg\n",
+      "20201228-SHFE_al2102-C-15400.jpg\n",
+      "20201228-SHFE_al2102-P-15400.jpg\n",
+      "20201228-SHFE_al2102-C-15500.jpg\n",
+      "20201228-SHFE_al2102-P-15500.jpg\n",
+      "20201228-SHFE_al2102-C-15600.jpg\n",
+      "20201228-SHFE_al2102-P-15600.jpg\n",
+      "20201228-SHFE_al2102-C-15700.jpg\n",
+      "20201228-SHFE_al2102-P-15700.jpg\n",
+      "20201228-SHFE_al2102-C-15800.jpg\n",
+      "20201228-SHFE_al2102-P-15800.jpg\n",
+      "20201228-SHFE_al2102-C-15900.jpg\n",
+      "20201228-SHFE_al2102-P-15900.jpg\n",
+      "20201228-SHFE_al2102-C-16000.jpg\n",
+      "20201228-SHFE_al2102-P-16000.jpg\n",
+      "20201228-SHFE_al2102-C-16100.jpg\n",
+      "20201228-SHFE_al2102-P-16100.jpg\n",
+      "20201228-SHFE_al2102-C-16200.jpg\n",
+      "20201228-SHFE_al2102-P-16200.jpg\n",
+      "20201228-SHFE_al2102-C-16300.jpg\n",
+      "20201228-SHFE_al2102-P-16300.jpg\n",
+      "20201228-SHFE_al2102-C-16400.jpg\n",
+      "20201228-SHFE_al2102-P-16400.jpg\n",
+      "20201228-SHFE_al2102-C-16500.jpg\n",
+      "20201228-SHFE_al2102-P-16500.jpg\n",
+      "20201228-SHFE_al2102-C-16600.jpg\n",
+      "20201228-SHFE_al2102-P-16600.jpg\n",
+      "20201228-SHFE_al2102-C-16700.jpg\n",
+      "20201228-SHFE_al2102-P-16700.jpg\n",
+      "20201228-SHFE_al2102-C-16800.jpg\n",
+      "20201228-SHFE_al2102-P-16800.jpg\n",
+      "20201228-SHFE_cu2102-7型报价图.jpg\n",
+      "20201228-SHFE_cu2102.jpg\n",
+      "20201228-SHFE_cu2102-C-48000.jpg\n",
+      "20201228-SHFE_cu2102-P-48000.jpg\n",
+      "20201228-SHFE_cu2102-C-49000.jpg\n",
+      "20201228-SHFE_cu2102-P-49000.jpg\n",
+      "20201228-SHFE_cu2102-C-50000.jpg\n",
+      "20201228-SHFE_cu2102-P-50000.jpg\n",
+      "20201228-SHFE_cu2102-C-51000.jpg\n",
+      "20201228-SHFE_cu2102-P-51000.jpg\n",
+      "20201228-SHFE_cu2102-C-52000.jpg\n",
+      "20201228-SHFE_cu2102-P-52000.jpg\n",
+      "20201228-SHFE_cu2102-C-53000.jpg\n",
+      "20201228-SHFE_cu2102-P-53000.jpg\n",
+      "20201228-SHFE_cu2102-C-54000.jpg\n",
+      "20201228-SHFE_cu2102-P-54000.jpg\n",
+      "20201228-SHFE_cu2102-C-55000.jpg\n",
+      "20201228-SHFE_cu2102-P-55000.jpg\n",
+      "20201228-SHFE_cu2102-C-56000.jpg\n",
+      "20201228-SHFE_cu2102-P-56000.jpg\n",
+      "20201228-SHFE_cu2102-C-57000.jpg\n",
+      "20201228-SHFE_cu2102-P-57000.jpg\n",
+      "20201228-SHFE_cu2102-C-58000.jpg\n",
+      "20201228-SHFE_cu2102-P-58000.jpg\n",
+      "20201228-SHFE_cu2102-C-59000.jpg\n",
+      "20201228-SHFE_cu2102-P-59000.jpg\n",
+      "20201228-SHFE_cu2102-C-60000.jpg\n",
+      "20201228-SHFE_cu2102-P-60000.jpg\n",
+      "20201228-SHFE_cu2102-C-61000.jpg\n",
+      "20201228-SHFE_cu2102-P-61000.jpg\n",
+      "20201228-SHFE_cu2102-C-62000.jpg\n",
+      "20201228-SHFE_cu2102-P-62000.jpg\n",
+      "20201228-SHFE_cu2102-C-63000.jpg\n",
+      "20201228-SHFE_cu2102-P-63000.jpg\n",
+      "20201228-SHFE_zn2102-7型报价图.jpg\n",
+      "20201228-SHFE_zn2102.jpg\n",
+      "20201228-SHFE_zn2102-C-18800.jpg\n",
+      "20201228-SHFE_zn2102-P-18800.jpg\n",
+      "20201228-SHFE_zn2102-C-19000.jpg\n",
+      "20201228-SHFE_zn2102-P-19000.jpg\n",
+      "20201228-SHFE_zn2102-C-19200.jpg\n",
+      "20201228-SHFE_zn2102-P-19200.jpg\n",
+      "20201228-SHFE_zn2102-C-19400.jpg\n",
+      "20201228-SHFE_zn2102-P-19400.jpg\n",
+      "20201228-SHFE_zn2102-C-19600.jpg\n",
+      "20201228-SHFE_zn2102-P-19600.jpg\n",
+      "20201228-SHFE_zn2102-C-19800.jpg\n",
+      "20201228-SHFE_zn2102-P-19800.jpg\n",
+      "20201228-SHFE_zn2102-C-20000.jpg\n",
+      "20201228-SHFE_zn2102-P-20000.jpg\n",
+      "20201228-SHFE_zn2102-C-20200.jpg\n",
+      "20201228-SHFE_zn2102-P-20200.jpg\n",
+      "20201228-SHFE_zn2102-C-20400.jpg\n",
+      "20201228-SHFE_zn2102-P-20400.jpg\n",
+      "20201228-SHFE_zn2102-C-20600.jpg\n",
+      "20201228-SHFE_zn2102-P-20600.jpg\n",
+      "20201228-SHFE_zn2102-C-20800.jpg\n",
+      "20201228-SHFE_zn2102-P-20800.jpg\n",
+      "20201228-SHFE_zn2102-C-21000.jpg\n",
+      "20201228-SHFE_zn2102-P-21000.jpg\n",
+      "20201228-SHFE_zn2102-C-21200.jpg\n",
+      "20201228-SHFE_zn2102-P-21200.jpg\n",
+      "20201228-SHFE_zn2102-C-21400.jpg\n",
+      "20201228-SHFE_zn2102-P-21400.jpg\n",
+      "20201228-SHFE_zn2102-C-21600.jpg\n",
+      "20201228-SHFE_zn2102-P-21600.jpg\n",
+      "20201228-SHFE_zn2102-C-21800.jpg\n",
+      "20201228-SHFE_zn2102-P-21800.jpg\n",
+      "20201228-SHFE_zn2102-C-22000.jpg\n",
+      "20201228-SHFE_zn2102-P-22000.jpg\n",
+      "20201228-SHFE_zn2102-C-22200.jpg\n",
+      "20201228-SHFE_zn2102-P-22200.jpg\n",
+      "20201228-SHFE_zn2102-C-22400.jpg\n",
+      "20201228-SHFE_zn2102-P-22400.jpg\n",
+      "20201228-SHFE_zn2102-C-22600.jpg\n",
+      "20201228-SHFE_zn2102-P-22600.jpg\n",
+      "20201228-SHFE_zn2102-C-22800.jpg\n",
+      "20201228-SHFE_zn2102-P-22800.jpg\n",
+      "20201228-SHFE_zn2102-C-23000.jpg\n",
+      "20201228-SHFE_zn2102-P-23000.jpg\n",
+      "20201228-SHFE_zn2102-C-23200.jpg\n",
+      "20201228-SHFE_zn2102-P-23200.jpg\n",
+      "20201228-SHFE_zn2102-C-23400.jpg\n",
+      "20201228-SHFE_zn2102-P-23400.jpg\n",
+      "20201228-SHFE_zn2102-C-23600.jpg\n",
+      "20201228-SHFE_zn2102-P-23600.jpg\n",
+      "20201228-SHFE_zn2102-C-23800.jpg\n",
+      "20201228-SHFE_zn2102-P-23800.jpg\n",
+      "20201228-SHFE_zn2102-C-24000.jpg\n",
+      "20201228-SHFE_zn2102-P-24000.jpg\n",
+      "20201228-SHFE_ru2102-7型报价图.jpg\n",
+      "20201228-SHFE_ru2102.jpg\n",
+      "20201228-SHFE_ru2102-C-12000.jpg\n",
+      "20201228-SHFE_ru2102-P-12000.jpg\n",
+      "20201228-SHFE_ru2102-C-12250.jpg\n",
+      "20201228-SHFE_ru2102-P-12250.jpg\n",
+      "20201228-SHFE_ru2102-C-12500.jpg\n",
+      "20201228-SHFE_ru2102-P-12500.jpg\n",
+      "20201228-SHFE_ru2102-C-12750.jpg\n",
+      "20201228-SHFE_ru2102-P-12750.jpg\n",
+      "20201228-SHFE_ru2102-C-13000.jpg\n",
+      "20201228-SHFE_ru2102-P-13000.jpg\n",
+      "20201228-SHFE_ru2102-C-13250.jpg\n",
+      "20201228-SHFE_ru2102-P-13250.jpg\n",
+      "20201228-SHFE_ru2102-C-13500.jpg\n",
+      "20201228-SHFE_ru2102-P-13500.jpg\n",
+      "20201228-SHFE_ru2102-C-13750.jpg\n",
+      "20201228-SHFE_ru2102-P-13750.jpg\n",
+      "20201228-SHFE_ru2102-C-14000.jpg\n",
+      "20201228-SHFE_ru2102-P-14000.jpg\n",
+      "20201228-SHFE_ru2102-C-14250.jpg\n",
+      "20201228-SHFE_ru2102-P-14250.jpg\n",
+      "20201228-SHFE_ru2102-C-14500.jpg\n",
+      "20201228-SHFE_ru2102-P-14500.jpg\n",
+      "20201228-SHFE_ru2102-C-14750.jpg\n",
+      "20201228-SHFE_ru2102-P-14750.jpg\n",
+      "20201228-SHFE_ru2102-C-15000.jpg\n",
+      "20201228-SHFE_ru2102-P-15000.jpg\n",
+      "20201228-SHFE_ru2102-C-15250.jpg\n",
+      "20201228-SHFE_ru2102-P-15250.jpg\n",
+      "20201228-SHFE_ru2102-C-15500.jpg\n",
+      "20201228-SHFE_ru2102-P-15500.jpg\n",
+      "20201228-SHFE_ru2102-C-15750.jpg\n",
+      "20201228-SHFE_ru2102-P-15750.jpg\n",
+      "20201228-SHFE_ru2102-C-16000.jpg\n",
+      "20201228-SHFE_ru2102-P-16000.jpg\n",
+      "20201228-SHFE_ru2102-C-16250.jpg\n",
+      "20201228-SHFE_ru2102-P-16250.jpg\n",
+      "20201228-SHFE_ru2102-C-16500.jpg\n",
+      "20201228-SHFE_ru2102-P-16500.jpg\n",
+      "20201228-SHFE_ru2102-C-16750.jpg\n",
+      "20201228-SHFE_ru2102-P-16750.jpg\n",
+      "20201228-SHFE_ru2102-C-17000.jpg\n",
+      "20201228-SHFE_ru2102-P-17000.jpg\n",
+      "20201228-SHFE_ru2102-C-17250.jpg\n",
+      "20201228-SHFE_ru2102-P-17250.jpg\n",
+      "20201228-SHFE_ru2102-C-17500.jpg\n",
+      "20201228-SHFE_ru2102-P-17500.jpg\n",
+      "20201228-SHFE_ru2102-C-17750.jpg\n",
+      "20201228-SHFE_ru2102-P-17750.jpg\n",
+      "20201228-SHFE_ru2102-C-18000.jpg\n",
+      "20201228-SHFE_ru2102-P-18000.jpg\n",
+      "20201228-SHFE_ru2102-C-18250.jpg\n",
+      "20201228-SHFE_ru2102-P-18250.jpg\n"
      ]
     }
    ],
