--- a/futures_option/futures_option_auto_screenshot.ipynb
+++ b/futures_option/futures_option_auto_screenshot.ipynb
@@ -932,6 +932,19 @@
     "            y += 22\n",
     "\n",
     "\n",
+    "def statistics_time(func):\n",
+    "    \"\"\"统计程序运行时间\"\"\"\n",
+    "\n",
+    "    def test_time(*args, **kwargs):\n",
+    "        start_time = datetime.datetime.now()\n",
+    "        func(*args, **kwargs)\n",
+    "        end_time = datetime.datetime.now()\n",
+    "        result = end_time - start_time\n",
+    "        print('\\n\\n程序开始时间{}，\\n结束时间{}，\\n耗时{}'.format(start_time, end_time, result))\n",
+    "\n",
+    "    return test_time\n",
+    "\n",
+    "\n",
     "# 生成商品期权的对象\n",
     "futures_option = FuturesOption()\n",
     "dir_path = 'F:\\\\杂物放置处\\\\期货期权'\n",
@@ -1094,6 +1107,13 @@
     "        futures_option.shfe_option(ru_extent)\n",
     "\n",
     "\n",
+    "@statistics_time\n",
+    "def main():\n",
+    "    dce_main()\n",
+    "    zce_main()\n",
+    "    shfe_main()\n",
+    "\n",
+    "\n",
     "# ================================大连商品交易所的期权品种==========================================\n",
     "dce_target = [\n",
     "    'i',\n",
@@ -1134,9 +1154,7 @@
     "ru_extent = [shfe_target[3] + shfe_contract_month, 12000, 18250, 9300]  # 第三与第四个参数是指截取的执行价范围，第五个参数是指参与的起始执行价\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    dce_main()\n",
-    "    zce_main()\n",
-    "    shfe_main()\n",
+    "    main()\n",
     "\n",
     "\n",
     "\n",
