--- a/futures_option/futures_option_auto_screenshot.ipynb
+++ b/futures_option/futures_option_auto_screenshot.ipynb
@@ -644,8 +644,8 @@
     "if __name__ == '__main__':\n",
     "    # 生成商品期权的对象\n",
     "    futures_option = FuturesOption()\n",
-    "    # dir_path = futures_option.save_path('期货期权')\n",
-    "    dir_path = 'F:\\\\杂物放置处\\\\期货期权'\n",
+    "    # dir_path = futures_option.save_path('商品期权')\n",
+    "    dir_path = 'F:\\\\杂物放置处\\\\商品期权'\n",
     "    date = g.enterbox('请输入日期，例如2020年7月20日，即输入20200720', '日期输入')\n",
     "    if date is None:\n",
     "        exit()\n",
