--- a/JN_1.ipynb
+++ b/JN_1.ipynb
@@ -196,7 +196,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../../data/house.csv')\n",
+    "df = pd.read_csv('data/house.csv')\n",
     "df.head(10)"
    ]
   },
